fixed mui table overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,9 @@ body {
 }
 
 .App {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
   text-align: center;
 }
 
